--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 button.search-btn{
     padding: 4px 1rem !important;
-    font-size: 1rem;
+    font-size: 1rem !important;
     border-radius: var(--bs-border-radius);
 }
 input.search-bar{
