--- a/style.css
+++ b/style.css
@@ -16,3 +16,6 @@ input.search-bar:focus{
     border-color: grey;
     box-shadow: none;
 }
+div.footer-wrapper{
+    background: var(--bs-tertiary-bg);
+}
