Given a final touch. changed the title and add favicon. now it's ready to launch as version 1.0

--- a/style.css
+++ b/style.css
@@ -16,3 +16,9 @@ input.search-bar:focus{
     border-color: grey;
     box-shadow: none;
 }
+div.footer-wrapper{
+    background: var(--bs-tertiary-bg);
+}
+img.hero-image{
+    transform: rotate(4deg);
+}
